--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,8 +1,29 @@
-<div id="wrapper">
-    <h1>Billboard Scraper</h1>
+<div class="container-fluid">
+    
+    <div class="jumbotron">
+        <div class="container">
+            <h1>Billboard Scraper</h1>
+            <p>
+                <a class="btn btn-primary btn-lg">Scrape</a>
+            </p>
+        </div>
+    </div>
+    
+    
     <h2>
         {{!-- <i>If you can do this...the homework should be no problem.</i> --}}
     </h2>
-    <div id="headlines"></div>
-    <div id="comments"></div>
+
+    
+    <div class="row">
+        <div id="headlines" class="col-6">
+            <h2>Headlines</h2>
+        </div>
+        <div id="comments" class="col-6">
+            <h2>Comments</h2>
+        </div>
+    </div>
+    
+    
+    
 </div>
