--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,18 +2,19 @@
 <html lang="en">
 <head>
         <meta charset="UTF-8">
-        <title>Scraping With Mongoose</title>
+        <title>Billboard.com Scraper</title>
+        
         <style>
             body {
-                background-color: #F2F6D0
+                background-color: white;
             }
     
-            #wrapper {
-                width: 960px;
-                margin-left: auto;
-                margin-right: auto;
-                padding-top: 5%;
-            }
+           .container-fluid{
+           }
+
+           .jumbotron{
+               text-align: center;
+           }
     
             #headlines {
                 display: inline-block;
@@ -31,7 +32,7 @@
             input {
                 display: block;
                 width: 100%;
-                background-color: #FCF5C7;
+                background-color: #e9ecef;
             }
     
             input {
@@ -43,7 +44,18 @@
                 height: 200px;
                 font-size: 18px;
             }
+
+            .btn-primary {
+                color: #fff;
+                background-color: lavender;
+                border-color: lavender;
+            }
         </style>
+
+        <!-- Latest compiled and minified CSS & JS -->
+    <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="//code.jquery.com/jquery.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="/assets/app.js"></script>
@@ -53,4 +65,4 @@
     {{{ body }}}
 </body>
 
-</html>
+</html>         
